adding updates to script before bb

--- a/index.html
+++ b/index.html
@@ -20,5 +20,13 @@
     <audio id="tick" src="assets/tick.wav" type="audio/wave"></audio>
     <audio id="ding" src="assets/ding.wav" type="audio/wave"></audio>
     <audio id="done" src="assets/done.wav" type="audio/wave"></audio>
+    <video
+      id="wave"
+      src="assets/wave.mp4"
+      type="video/mp4"
+      autoplay
+      muted
+      loop
+    ></video>
   </body>
 </html>
